# VoxReTune

./: .gitignore  CMakeLists.txt  README.md
source/detection/: YinPitchDetector.cpp  YinPitchDetector.h
source/engine/: CorrectionEngine.cpp  CorrectionEngine.h  signalsmith-stretch.h
source/models/: CorrectionBox.h  PitchLine.h
source/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/ui/: PianoRollComponent.cpp  PianoRollComponent.h
